hphp/hack/test/typecheck/enum_class_label/memoized_no_such_class.php.exp
File "memoized_no_such_class.php", line 3, characters 13-23:
Unbound name: `NoSuchClass` (an object type) (Naming[2049])
File "memoized_no_such_class.php", line 3, characters 13-23:
`__Memoize` can only be used with items from MemoizeOption. (Naming[2124])
